--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <div class="prueba"><h2>INICIO</h2></div>
+        <div class="prueba"><h2>Sobre nosotros</h2></div>
     </main>
     <footer>
         <div class="informacion">
